Replace the use of 'new Integer' with 'Integer.valueOf'.